# sample_package_project

./: LICENSE  README.md  pyproject.toml
src/example_package_from_ManishW/: example.py
src/example_package_from_ManishW.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
