[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_from_ManishW"
version = "0.0.1"
authors = [
  { name="Manish Wahale", email="manishdrw1@gmail.com" },
]
description = "My first example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ManishW315/sample_package_project"
"Bug Tracker" = "https://github.com/ManishW315/sample_package_project/issues"
